@@ -1,3 +1,8 @@
+2004-07-31  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* spf.test:      Added lots of macro tests and fixed some bugs
+	* spf.tcl:       that this revealed.
+
 2004-07-30  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* spf.tcl:       Updated to draft-ietf-marid-protocol-00 document.
